# lambda

./: .gitignore  Justfile  README.md  dune  dune-project  errors.ml  eval.ml  lexer.mll  main.ml  parser.ml  parser.mly  reader.ml  reduce.ml  term.ml
examples/: core.ch  logic.ch  numbers.ch  pairs.ch
test/: dune  eval_test.ml  parser_test.ml  reader_test.ml  term_test.ml
