(ocamllex lexer)

(menhir
 (modules parser))

(library
 (name term)
 (modules term)
 (preprocess
  (pps bisect_ppx --conditional)))

(library
 (name eval)
 (modules eval)
 (libraries term)
 (preprocess
  (pps bisect_ppx --conditional)))

(library
 (name reader)
 (modules reader parser lexer)
 (libraries term)
 (preprocess
  (pps bisect_ppx --conditional)))

(executable
 (name main)
 (modules main)
 (public_name main)
 (libraries reader term eval))
