(library
 (name term_test)
 (modules term_test)
 (libraries term)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test)))

(library
 (name eval_test)
 (modules eval_test)
 (libraries term eval reduce reader)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test)))

(library
 (name reader_test)
 (modules reader_test)
 (libraries term reader)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test)))
